--- a/app/src/main/res/xml/monitor_main_tabs_bar.xml
+++ b/app/src/main/res/xml/monitor_main_tabs_bar.xml
@@ -12,6 +12,10 @@
         icon="@drawable/ic_data_statistics"
         title="监控数据" />
     <tab
+        id="@+id/tab_messages"
+        icon="@drawable/ic_messages"
+        title="报警信息" />
+    <tab
         id="@+id/tab_component_info"
         icon="@drawable/ic_detail"
         title="设备管理" />
